--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "luxury";
   src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
@@ -10,6 +9,12 @@
   text-align: center;
   font-size: 250%;
 }
+.the-residence-container{
+  background-color: #efbf3b;
+  color: grey;
+  padding: 10px 10px 10px 10px;
+
+}
 .sidebar-center {
   height: 210px;
   margin-top: 20px;
@@ -19,7 +24,7 @@
   /* background-color: grey; */
 }
 .disclaimer {
-  /* background-color: grey; */
+  background-color: grey;
   height: 130px;
   padding: 6px;
 }
@@ -50,6 +55,7 @@
 }
 #disclaimer {
   font-family: "luxury";
+  color: grey;
 }
 
 .dd {
@@ -94,13 +100,15 @@
   padding-bottom: -6px;
   position: relative;
 }
-h6.gold-secition {
+h6.them {
+  padding-left: 20px;
   font-size: 18px;
-  margin-top: -59px;
+  margin-top: -79px;
   margin-right: 310px;
 }
-h1.gold-secition {
-  font-size: 45px;
+h1.them {
+  padding-left: 20px;
+  font-size: 35px;
 }
 .gold-secition {
   font-family: "luxury";
