--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -12,7 +12,7 @@
 .the-residence-container{
   background-color: #efbf3b;
   color: grey;
-  padding: 10px 10px 10px 10px;
+  padding: 5px  5px 1px 5px;
 
 }
 .sidebar-center {
@@ -48,14 +48,18 @@
 }
 .paragraph-bottom-disclaimer {
   height: 200px;
-  font-size: 18px;
   color: rgb(85, 85, 85);
-  /* font-family: "luxury"; */
-  /* background: pink; */
+ 
 }
-#disclaimer {
+#disclaimer1 {
   font-family: "luxury";
   color: grey;
+  font-size: 18px;
+}
+#disclaimer2 {
+  font-family: "luxury";
+  color: grey;
+  font-size: 13px;
 }
 
 .dd {
@@ -84,12 +88,12 @@
   font-size: 15px;
   color: #7b7471;
   padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 10px; 
 }
 .example.two {
   font-family: "luxury";
   font-size: 15px;
-  color: #7b7471;
+  color: #7b7471; 
   padding-top: 5px;
   padding-bottom: 10px;
   text-align: right;
@@ -102,13 +106,13 @@
 }
 h6.them {
   padding-left: 20px;
-  font-size: 18px;
+  font-size: 10px;
   margin-top: -79px;
   margin-right: 310px;
 }
 h1.them {
   padding-left: 20px;
-  font-size: 35px;
+  font-size: 28px;
 }
 .gold-secition {
   font-family: "luxury";
