--- a/src/Neighborhood/Neighborhood.css
+++ b/src/Neighborhood/Neighborhood.css
@@ -195,7 +195,7 @@ position: absolute;
 /* image */
 .neighborhood-profile {
   object-fit: cover;
-  height: 88vh;
+  height: 100%;
   width: 100%;
 }
 /* BUTTON */
