--- a/src/Amenities/Amenitieschild.css
+++ b/src/Amenities/Amenitieschild.css
@@ -49,7 +49,7 @@
 .amenww-3 {
   padding: 6px;
   color: grey;
-  height: 455px;
+  height: 365px; 
   background: rgb(49, 49, 49);
 }
 /* EXPLORE */
@@ -107,7 +107,7 @@
   margin-left: 40px;
 }
 .careyy{
-  margin-top: 15px;
+  margin-top: 5px;
   color: goldenrod;
   font-family: "luxury";
   font-size: 25px;
@@ -161,11 +161,11 @@
 }
 .paragraph-infi {
   text-align: left;
-  padding: 15px 0px 7px 7px;
+  padding: 5px 0px 7px 7px;
   /* background-color: pink; */
   font-family: "luxury";
   margin-left: 9%;
-  margin-top: -12px;
+  margin-top: -12px auto;
 }
 
 .downarrow{
@@ -218,4 +218,20 @@
     /* background-color: pink; */
     font-family: "luxury";
   }
+}
+.the-neighboorhoodd {
+  color: gray;
+  height: 290px auto;
+  background: rgb(234, 184, 58);
+  padding: 5px  5px 1px 10px;
+  text-align: left;
+}
+h6.gold-secttionn {
+  font-size: 12px;
+  margin-top: -30px;
+  /* margin-right: 270px; */
+}
+h1.gold-secttionn {
+  font-size: 30px;
+  margin-bottom: 30px;
 }
