--- a/src/Neighborhood/Neighborhoodchild.css
+++ b/src/Neighborhood/Neighborhoodchild.css
@@ -7,7 +7,7 @@
 
 .childimage.homeneigh {
   width: 100%;
-  height: 93vh;
+  height: 100%;
   object-fit: cover;
 }
 .grid-child-element.purple {
@@ -54,7 +54,7 @@
 
 @media (min-width: 768px) {
   .button-46 {
-    font-size: 20px;
+    font-size: 20px; 
     min-width: 200px;
     padding: 14px 16px;
   }
@@ -69,7 +69,7 @@
 h6.gold-secttion {
   font-size: 10px;
   margin-top: 30px;
-  margin-right: 270px;
+  /* margin-right: 270px; */
 }
 h1.gold-secttion {
   font-size: 28px;
@@ -98,37 +98,36 @@ h1.gold-secttion {
   margin-left: 30px;
   /* background-color: peru; */
  
-
 }
 .exclude {
   color: grey;
   font-family: "luxury";
   margin-top: 10px; 
-  font-size: 30px;
-  padding: 5px 0px 7px 7px;
+  font-size: 34px;
+  padding: 15px 0px 7px 7px;
 }
 
 .excluder {
   color: gray;
   font-family: "luxury";
-  font-size: 30px;
+  font-size: 34px;
 }
 .coddler {
   font-family: "luxury";
   text-align: left;
   color: grey;
-  font-size: 15px;
+  font-size: 20px;
   /* background-color: pink; */
 }
 .coddler.bot {
   font-family: "luxury";
   text-align: left;
   color: grey;
-  margin-top: 3px;
+  margin-top: 7px;
 }
 .coddle {
   height: 200px;
-  padding: 8px 20px 7px 27px;
+  padding: 14px 20px 7px 27px;
   /* background-color: pink; */
 
 }
