--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,266 +1,3 @@
-/* .landing-container {
-  background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
-  height: 93vh;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.heading-landing-page {
-  padding: 5px;
-  text-align: left;
-  margin-left: 38px;
-}
-@font-face {
-  font-family: "luxury";
-  src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-}
-@font-face {
-  font-family: "luxury2";
-  src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
-}
-@font-face {
-  font-family: "luxury3";
-  src: url(/luxury/DIN\ Black.ttf);
-}
-@font-face {
-  font-family: "luxury4";
-  src: url(/luxury/DIN\ Medium.ttf);
-}
-
-@media only screen and (max-width: 600px) {
-  .landing-container {
-    background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
-    height: 93vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-  }
-  .logo {
-    margin-left: 1%;
-    height: 180px;
-    margin-top: 25%;
-  }
-  .body-landing-page {
-    padding: 15px 5px 5px 5px;
-    margin-top: -4%;
-    margin-left: 9%;
-    height: 190px;
-  }
-  .lorem {
-    color: white;
-    padding: 5px;
-    width: 480px;
-    text-align: left;
-    font-family: "luxury2";
-    font-size: 229%;
-    font-weight: bold;
-  }
-  .small-letters {
-    margin-top: -1%;
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
-    text-align: left;
-    width: 480px;
-  }
-  .nav-to {
-    cursor: pointer;
-    color: #7c7471;
-    font-size: 170%;
-    font-family: "luxury";
-    text-align: center;
-    margin-left: 5%;
-    margin-top: 1%;
-  }
-  .riverside-drive-nairobi {
-    position: absolute;
-    bottom: 30px;
-    right: 42px;
-    font-family: "luxury";
-    font-size: 67%;
-    font-weight: normal;
-  }
-
-}
-@media only screen and (min-width: 600px) {
-  .landing-container {
-    background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
-    height: 93vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-  }
-  .logo {
-    margin-left: 1%;
-    height: 180px;
-    margin-top: 25%;
-  }
-  .body-landing-page {
-    padding: 15px 5px 5px 5px;
-    margin-top: -4%;
-    margin-left: 9%;
-    height: 190px;
-  }
-  .lorem {
-    color: white;
-    padding: 5px;
-    width: 480px;
-    text-align: left;
-    font-family: "luxury2";
-    font-size: 279%;
-    font-weight: bold;
-  }
-  .small-letters {
-    margin-top: -1%;
-    font-size: 29px;
-    font-weight: bold;
-    color: white;
-    text-align: left;
-    width: 480px;
-  }
-  .nav-to {
-    cursor: pointer;
-    color: #7c7471;
-    font-size: 170%;
-    font-family: "luxury";
-    text-align: center;
-    margin-left: 5%;
-    margin-top: 1%;
-  }
-  .riverside-drive-nairobi {
-    position: absolute;
-    bottom: 30px;
-    right: 42px;
-    font-family: "luxury";
-    font-size: 67%;
-    font-weight: normal;
-  }
-
-}
-
-@media only screen and (min-width: 992px) {
-  .landing-container {
-    background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
-    height: 93vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-  }
-  .logo {
-    margin-left: -7%;
-    height: 170px;
-    margin-top: 10%;
-  }
-  .body-landing-page {
-    padding: 15px 5px 5px 5px;
-    margin-top: 1%;
-    margin-left: 1%;
-    height: 190px;
-  }
-  .lorem {
-    color: white;
-    padding: 5px;
-    width: 480px;
-    text-align: left;
-    font-family: "luxury2";
-    font-size: 159%;
-  }
-  .small-letters {
-    margin-top: 1%;
-    font-size: 29px;
-    font-weight: bold;
-    color: white;
-    text-align: left;
-    width: 480px;
-  }
-  .nav-to {
-    cursor: pointer;
-    color: #7c7471;
-    font-size: 190%;
-    font-family: "luxury";
-    text-align: center;
-    margin-right: 8%;
-  }
-  .riverside-drive-nairobi {
-    position: absolute;
-    bottom: 30px;
-    right: 42px;
-    font-family: "luxury";
-    font-size: 80%;
-    font-weight: normal;
-  }
-
-
-}
-
-
-
-@media only screen and (min-width: 1200px) {
-  .landing-container {
-    background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
-    height: 93vh;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-  }
-  .logo {
-    margin-left: 1%;
-    height: 170px;
-    margin-top: 10%;
-  }
-  .heading-landing-page {
-    padding: 5px;
-    text-align: left;
-    
-    margin-left: 38px;
-    margin-top: -1%;
-  }
-  .body-landing-page {
-    padding: 15px 5px 5px 5px;
-    margin-top: 1%;
-    margin-left: 1%;
-    margin-top: -1%;
-    height: 190px;
-  }
-  .lorem {
-    color: white;
-    padding: 5px;
-    width: 480px;
-    text-align: center;
-    font-family: "luxury2";
-    font-size: 299%;
-  }
-  .small-letters {
-    margin-top: 0.5%;
-    font-size: 30px;
-    font-weight: normal;
-    color: white;
-    text-align: center;
-    width: 480px;
-  }
-  .nav-to {
-    cursor: pointer;
-    color: #7c7471;
-    font-size: 190%;
-    font-family: "luxury";
-    text-align: center;
-    margin-top: 1%;
-  }
-  .riverside-drive-nairobi {
-    position: absolute;
-    bottom: 19px;
-    right: 32px;
-    font-family: "luxury";
-    font-size: 110%;
-    font-weight: normal;
-  }
-  
-  
-} */
 
 @font-face {
   font-family: "luxury";
@@ -300,4 +37,9 @@
   font-family: "paragone";
   color: white;
   font-size: 25px;
+}
+.right-menu{
+  color: goldenrod;
+  transform: scale(1.4, 1.3);
+  margin-top: 10px;
 }
