--- a/src/Availability/Availability.css
+++ b/src/Availability/Availability.css
@@ -1,145 +1,142 @@
 .griid-container-elementt {
-    display: grid;
-    flex-wrap: wrap;
-    grid-template-columns:  6fr 9fr;
-    grid-gap: 0px;
-    font-family: 'luxury';
-    /* background-color: brown; */
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 6fr 9fr;
+  grid-gap: 0px;
+  font-family: "luxury";
+  /* background-color: brown; */
 }
 
 @font-face {
-    font-family: "luxury";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-  }
-  @font-face { 
-    font-family: "luxury";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
-  }
-  @font-face {
-    font-family: "luxury2";
-    src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
-  }
-  @font-face {
-    font-family: "luxury3";
-    src: url(/luxury/DIN\ Black.ttf);
-  }
-  @font-face {
-    font-family: "luxury4";
-    src: url(/luxury/DIN\ Medium.ttf);
-  }
-  .lux-head{
-    padding: 10px;
-    /* border-right: 3px solid grey; */
-    background-color: goldenrod;
-    width: 500px;
-  }
-  .topic-lux{
-    font-family: 'luxury';
-    margin-top: 15px;
-    margin-left: 20px;
-    font-weight: normal;
-    color: #7b7471;
-    /* border-right: 1px solid grey; */
-
-  }
-  .topic-lux-reserve{
-    font-family: 'luxury3';
-    margin-top: 15px;
-    margin-left: 20px;
-    font-weight: normal;
-    color: #7b7471;
-
-   
-  }
-  .lux-head.two{
-    height: 141px;
-  }
-  /* .lux-body{
+  font-family: "luxury";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+}
+@font-face {
+  font-family: "luxury";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular.otf);
+}
+@font-face {
+  font-family: "luxury2";
+  src: url(/din/fonts/FF\ DIN\ Pro\ Regular\ 2.otf);
+}
+@font-face {
+  font-family: "luxury3";
+  src: url(/luxury/DIN\ Black.ttf);
+}
+@font-face {
+  font-family: "luxury4";
+  src: url(/luxury/DIN\ Medium.ttf);
+}
+.lux-head {
+  padding: 10px;
+  /* border-right: 3px solid grey; */
+  background-color: goldenrod;
+  width: 500px;
+}
+.topic-lux {
+  font-family: "luxury";
+  margin-top: 15px;
+  margin-left: 20px;
+  font-weight: normal;
+  color: #7b7471;
+  /* border-right: 1px solid grey; */
+}
+.topic-lux-reserve {
+  font-family: "luxury";
+  margin-top: 15px;
+  margin-left: 20px;
+  font-weight: normal;
+  color: #7b7471;
+}
+.lux-head.two {
+  height: 141px;
+}
+/* .lux-body{
    
     border-right: 1px solid grey;
  
   } */
-  .body-lux{
-    font-family: 'luxury';
-    color: #7b7471;
+.body-lux {
+  font-family: "luxury";
+  color: #7b7471;
 
-    
-    margin-left: 30px;
-  }
-  .body-lux.tittle{
-    margin-top: 20px;
-    padding: 5px;
-    font-size: 30px;
-  }
-  .body-lux.one{
-    margin-top: 0;
-    font-size: 15px;
-    
-  }
-  .headingsss{
-    display: flex;
-  }
-  .body-one{
-    display: flex;
-    
-    height: 350px;
-  }
-  .body-two{
-    display: flex;
-    height: 350px;
-  }
-  .lux-body-upjuu{
-    width: 600px;
-    border-right: 1px solid  #7b7471;
-    border-bottom: 1px solid  #7b7471;
-/* background-color: brown; */
-  }
-  .lux-body-upple{
-    border-bottom: 1px solid  #7b7471;
-  }
-  .lux-body-updown{
-    width: 569px;
-    border-right: 1px solid  #7b7471;
-  }
-  .sect-body{
-    margin-top: 30px;
-    /* background-color: pink; */
-    height: 830px;
-  }
-  .topic-luxx{
-    font-family: 'luxury3';
-    margin-top: 15px;
-    margin-left: 20px;
-    color: #7b7471;
-    font-weight: bold;
+  margin-left: 30px;
+}
+.body-lux.tittle {
+  margin-top: 20px;
+  padding: 5px;
+  font-size: 30px;
+}
+.body-lux.one {
+  margin-top: 0;
+  font-size: 15px;
+}
+.headingsss {
+  display: flex;
+}
+.body-one {
+  display: flex;
+  height: 330px;
+}
+.body-two {
+  display: flex;
+  height: 320px;
+}
+.lux-body-upjuu {
+  width: 612px;
+  border-right: 1px solid #7b7471;
+  border-bottom: 1px solid #7b7471;
+/* background-color: burlywood; */
+  padding-right: 10px;
+}
+.lux-body-upple {
+  /* background-color: pink; */
+  padding-right: 10px;
+  border-bottom: 1px solid #7b7471;
+}
+.lux-body-updown {
+  /* background-color: pink; */
+  width: 569px;
+  border-right: 1px solid #7b7471;
+  padding-right: 10px;
+}
+.sect-body {
+  margin-top: 30px;
+  /* background-color: pink; */
+  height: 830px;
+}
+.topic-luxx {
+  margin-top: 15px;
+  margin-left: 20px;
+  color: #7b7471;
+  font-weight: normal;
+}
+.explore-avia {
+  font-family: "luxury";
+  font-weight: bold;
+  color: #7c7471;
 
-  }
-  .explore-avia {
-    font-family: 'luxury';
-    font-weight: bold;
-    color: #7c7471;
-   
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-    margin-top: 0px;
-  }
-  .number{
-    color: goldenrod;
-    font-weight: bold;
-    font-size: 290%;
-  } 
-.flexbox-container-availability{
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 0px;
+}
+.number {
+  color: goldenrod;
+  font-weight: bold;
+  font-size: 290%;
+}
+.flexbox-container-availability {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: stretch;
 }
-.flexbox-item-availability1{
+.flexbox-item-availability1 {
   flex-grow: 1;
   width: 400px;
 }
-.flexbox-item-availability2{
+.flexbox-item-availability2 {
   flex-grow: 1;
   width: 400px;
 }
