--- a/src/Residence/Rooms.css
+++ b/src/Residence/Rooms.css
@@ -143,6 +143,8 @@ h1.them {
 .residence-home-logo-white {
   margin-top: -12px;
   height: 288px; 
-  margin-bottom: -36px;
+  margin-bottom: -39px;
   position: relative;
+margin-right: 8px;
+
 }
