--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -12,7 +12,7 @@
   src: url(/paragone-luxury-serif-font/Paragone/Paragone.otf);
 }
 .flexbox-container {
-  background-image: url("http://www.thesaruni.com/TheSaruniImages/home.jpg");
+  background-image: url("http://testdeploy.thesaruni.com/home.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
