--- a/src/Amenities/Sun.css
+++ b/src/Amenities/Sun.css
@@ -24,10 +24,9 @@ h1.brown-section {
   font-size: 28px;
   font-family: "luxury";
 }
-h6.brown-section {
-  font-size: 19px;
+h6.the-section {
+  font-size: 17px;
   margin-top: -10px;
-  margin-right: 210px;
   font-family: "luxury";
 }
 .center1 {
