--- a/src/Amenities/Amenitieschild.css
+++ b/src/Amenities/Amenitieschild.css
@@ -1,10 +1,10 @@
 .gridd-container-element {
   display: grid;
-  grid-gap: 0px;  
+  grid-gap: 0px;
   grid-template-columns: 2fr 6fr;
 }
 .griddp-container-element {
-  display: grid; 
+  display: grid;
   grid-gap: 0px;
   grid-template-columns: 2fr 6fr;
 }
@@ -12,21 +12,21 @@
   margin: 0 0 0 0;
   height: 78vh;
 }
-.childimage.infinity{
+.childimage.infinity {
   object-fit: cover;
 }
 .grid-child-element.purn {
- height: 100%;
+  height: 100%;
   border: none;
   /* background-color: pink; */
   overflow: hidden;
 }
 .grid-child-element.purg {
   height: 88vh;
-   border: none;
-   /* background-color: pink; */
-   overflow: hidden;
- }
+  border: none;
+  /* background-color: pink; */
+  overflow: hidden;
+}
 .grid-child-element.green {
   border: none;
 }
@@ -49,16 +49,16 @@
   text-align: left;
 }
 .amenw-3 {
-  padding: 6px;
+  padding: 6px 0 10px  15px;
   color: grey;
-  height: 480px;
-  background: rgb(49, 49, 49);
+  height: 100%;
+  /* background: rgb(49, 49, 49); */
   /* overflow: hidden; */
 }
 .amenww-3 {
   padding: 6px;
   color: grey;
-  height: 410px; 
+  height: 410px;
   background: rgb(49, 49, 49);
 }
 /* EXPLORE */
@@ -66,7 +66,7 @@
   position: absolute;
   top: 123%;
   left: 50%;
- 
+
   transform: translate(-50%, -50%);
 }
 .arrow span {
@@ -108,21 +108,21 @@
   margin-right: 310px;
   font-family: "luxury";
 }
-.carey{
+.carey {
   margin-top: 25px;
   color: goldenrod;
   font-family: "luxury";
   font-size: 28px;
   margin-left: 40px;
 }
-.careyy{
+.careyy {
   margin-top: 5px;
   color: goldenrod;
   font-family: "luxury";
-  font-size: 29px;
-  margin-left: 40px;
+  font-size: 20px;
+  /* margin-left: 40px; */
 }
-.ring{
+.ring {
   /* text-align: center; */
   padding: 5px 5px 5px 5px;
   height: 180px;
@@ -131,7 +131,7 @@
 }
 .paragraph-bottommer {
   padding: 29px 27px 7px 7px;
- /* background-color: pink; */
+  /* background-color: pink; */
   margin-left: 30px;
   height: 120px;
   font-size: 17px;
@@ -165,7 +165,7 @@
   margin-left: 180px;
   font-size: 120%;
   margin-top: 250px;
-  color: grey; 
+  color: grey;
   font-family: "luxury";
 }
 .paragraph-infi {
@@ -178,26 +178,26 @@
   margin-top: -12px auto;
 }
 
-.downarrow{
+.downarrow {
   text-decoration: none;
   color: grey;
 }
-@media all and (max-width:500px){
-  .gridd-container-element{
+@media all and (max-width: 500px) {
+  .gridd-container-element {
     display: block;
   }
-  .griddp-container-element{
+  .griddp-container-element {
     display: block;
   }
-  .grid-child-element.green.lobby{
+  .grid-child-element.green.lobby {
     object-fit: cover;
   }
-  .kubwaest{
+  .kubwaest {
     margin: 0 0 0 0;
   }
   .paragraph-bottommer {
     padding: 29px 27px 7px 7px;
-   /* background-color: pink; */
+    /* background-color: pink; */
     margin-left: 40px;
     height: 100px;
     font-size: 120%;
@@ -218,7 +218,7 @@
     font-family: "luxury";
     transform: scale(2.5, 2);
   }
-  .downarrow{
+  .downarrow {
     text-decoration: none;
     color: grey;
   }
@@ -232,14 +232,13 @@
   color: gray;
   height: 290px auto;
   background: rgb(234, 184, 58);
-  padding: 5px  5px 1px 10px;
+  padding: 5px 5px 1px 10px;
   text-align: center;
 }
 h6.gold-secttionn {
   font-size: 12px;
   margin-top: -45px;
   text-align: center;
-
 }
 h1.gold-secttionn {
   text-align: center;
@@ -247,18 +246,15 @@ h1.gold-secttionn {
   margin-bottom: 30px;
 }
 
-
 h6.amen-section {
   font-size: 15px;
   margin-top: -19%;
- text-align: left;
- padding-left: 57px;
+  text-align: left;
+  padding-left: 57px;
 }
 h1.amen-section {
   font-size: 40px;
 }
-
-
 
 .the-amenities {
   color: gray;
@@ -271,4 +267,61 @@ h1.amen-section {
   margin-top: -8%;
   height: 268px;
   margin-bottom: 0px;
+}
+.imageslide {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.imageslid {
+  object-fit: cover;
+  height: 100%;
+  width: 95%;
+  /* margin-left: 10px; */
+}
+.flexbox-container-all-amenities {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-between;
+  align-items: stretch;
+  height: 87vh;
+  padding: 0px 0px 0px 0px;
+}
+.flexbox-item-allamenities1 {
+  position: relative;
+  width: 220px;
+  flex-grow: 1;
+  height: 100%;
+  overflow: scroll;
+
+}
+.flexbox-item-allamenities2 {
+  position: relative;
+  flex-grow: 1;
+  height: 100%;
+}
+.am{
+  /* background-color: peru; */
+  margin-top: 10px;
+  padding: 2px 0 0 0;
+}
+.amenities-details {
+  margin-top: 25px;
+  color: goldenrod;
+  font-size: 18px;
+}
+.amenitieslink {
+  margin-top: 30px;
+  color: goldenrod;
+}
+#amenity {
+  margin-top: 20px;
+  color: gray;
+  font-size: 15px;
+}
+.top-c{
+  border-bottom: 3px solid goldenrod;
+  padding-bottom: 15px;
+  /* padding-right: 12px; */
+
 }
